Fix for https://github.com/openshift/origin/issues/3446
Increase min-width to 120px.
Since pods are set width no need for them to be a single column at mobile sizes so set pod-container to flex row at <768px

--- a/assets/app/styles/_components.less
+++ b/assets/app/styles/_components.less
@@ -64,6 +64,9 @@
         /* Switch to vertical layout at small sizes */
         .flex-direction(@direction: column);
       }
+      &.pod-container {
+        .flex-direction(@direction: row);
+      }
       &.pod-template-container {
         margin-top: 5px;
       }
@@ -215,9 +218,9 @@
     }
     .pod {
       .osc-object-highlight();
-      .flex(@columns: 1 1 auto);
+      .flex(@columns: 1 1 0);
       max-width: 450px;
-      min-width: 90px;
+      min-width: 120px;
       background-size: 20px 20px;
       border-radius: @border-radius-md;
       border: 1px solid transparent;
